@@ -132,7 +132,7 @@ else                           vv <- object$naive.var
 
 need.x <- is.na(match(type, c('response', 'deviance', 'working')))
 if (is.null(object$y) || !is.null(strata) || (need.x & is.null(object[['x']])))
-    mf <- model.frame(object)
+    mf <- stats::model.frame(object)
 
 y <- object$y
 if (is.null(y)) {
