@@ -159,7 +159,7 @@ survfit.formula <- function(formula, data, weights, subset,
     #  eg survfit(wt=Surv(time, status) ~1) 
     if (indx[1]==0) stop("a formula argument is required")
     temp <- Call[c(1, indx)]
-    temp[[1]] <- as.name("model.frame")
+    temp[[1L]] <- quote(stats::model.frame)
     m <- eval.parent(temp)
     
     Terms <- terms(formula, c("strata", "cluster"))
